creating unit tests

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
    "scripts": {
       "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
       "dev:DEBUG": "set DEBUG=api:main & ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
+      "test": "jest --testPathPattern=__tests__/",
+      "test:unit": "jest --testPathPattern=__tests__/unit",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
       "migration:create": "yarn run typeorm migration:create -d ./src/repositories/typeorm/data-source.ts",
       "migration:generate": "yarn run typeorm migration:generate -d ./src/repositories/typeorm/data-source.ts",
@@ -14,10 +16,13 @@
    "devDependencies": {
       "@types/debug": "^4.1.7",
       "@types/express": "^4.17.13",
+      "@types/jest": "^29.0.0",
       "@types/lodash": "^4.14.182",
       "@types/node": "^16.11.10",
       "@types/uuid": "^8.3.4",
+      "jest": "^29.0.2",
       "prettier": "^2.7.1",
+      "ts-jest": "^28.0.8",
       "ts-node": "10.7.0",
       "ts-node-dev": "^2.0.0",
       "typescript": "4.5.2"
